Suggested edits: Fix links in change tags
Follows up I3bd0d15bb2af71379dc378340cb9e4fd77cfed74.

Bug: T332419
Change-Id: Ie27c65303b256bd8a62fc485d8ad6cc47e0dfeb9

--- a/i18n/homepage/ar.json
+++ b/i18n/homepage/ar.json
@@ -140,13 +140,13 @@
 	"tag-newcomer_task-description": "تعديل مقترح من وحدة التعديلات المقترحة من لوحة المستخدم للوافد الجديد",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|مهمة الوافد الجديد: تحرير النسخ]]",
 	"tag-newcomer_task_copyedit-description": "تعديل «تحرير النسخ» مقترح من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|مهمة الوافد الجديد: مراجع]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|مهمة الوافد الجديد: مراجع]]",
 	"tag-newcomer_task_references-description": "تعديل «مراجع» مقترح من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|مهمة الوافد الجديد: تحديث]]",
 	"tag-newcomer_task_update-description": "تعديل «تحديث» مقترح من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|مهمة الوافد الجديد: توسعة]]",
 	"tag-newcomer_task_expand-description": "تعديل «توسعة» مقترح من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|مهمة الوافد الجديد: روابط]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|مهمة الوافد الجديد: روابط]]",
 	"tag-newcomer_task_links-description": "تعديل «روابط» مقترح من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|اقتراح: إضافة روابط]]",
 	"tag-newcomer_task_add_link-description": "مهمة التعديل «إضافة وصلة» مقترحة من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
