--- a/i18n/homepage/ban.json
+++ b/i18n/homepage/ban.json
@@ -98,9 +98,9 @@
 	"growthexperiments-tour-response-button-okay": "Ngerti",
 	"tag-help_module_question": "Petakon modul wantuan",
 	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Sesana sang anganggé anyar]]",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Tugas sang anganggé anyar: pustaka]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Tugas sang anganggé anyar: pustaka]]",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Tugas sang anganggé anyar: nganyarin]]",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Tugas sang anganggé anyar: pranala]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Tugas sang anganggé anyar: pranala]]",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Kasaranang: tambahang pranala]]",
 	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Kasaranang: tambahin gambar]]",
 	"tag-newcomer_task_image_suggestion-description": "Tugas uahan \"nambahin gambar\" ané kasaranang olih modul saran panguahan antuk kaca beranda pendatang anyar",
