--- a/i18n/homepage/be.json
+++ b/i18n/homepage/be.json
@@ -126,13 +126,13 @@
 	"tag-newcomer_task-description": "Праўка, прапанаваная модулем прапанаваных правак хатняй старонкі для пачаткоўца",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Заданне для пачаткоўца: вычытка]]",
 	"tag-newcomer_task_copyedit-description": "Праўка, зробленая ў рамках задання «Вычытка», прапанаванага модулем «Прапанаваныя праўкі» хатняй старонкі для пачаткоўца",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Заданне для пачаткоўца: крыніцы]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Заданне для пачаткоўца: крыніцы]]",
 	"tag-newcomer_task_references-description": "Праўка, зробленая ў рамках задання «Крыніцы», прапанаванага модулем «Прапанаваныя праўкі» хатняй старонкі для пачаткоўца",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Заданне для пачаткоўца: абнаўленне]]",
 	"tag-newcomer_task_update-description": "Праўка, зробленая ў рамках задання «Абнаўленне», прапанаванага модулем «Прапанаваныя праўкі» хатняй старонкі для пачаткоўца",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Заданне для пачаткоўца: пашырэнне]]",
 	"tag-newcomer_task_expand-description": "Праўка, зробленая ў рамках задання «Пашырэнне», прапанаванага модулем «Прапанаваныя праўкі» хатняй старонкі для пачаткоўца",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Заданне для пачаткоўца: спасылкі]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Заданне для пачаткоўца: спасылкі]]",
 	"tag-newcomer_task_links-description": "Праўка, зробленая ў рамках задання «Спасылкі», прапанаванага модулем «Прапанаваныя праўкі» хатняй старонкі для пачаткоўца",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Заданне для пачаткоўца: дадаванне спасылак]]",
 	"tag-newcomer_task_add_link-description": "Праўка, зробленая ў рамках задання «Дадаванне спасылак», прапанаванага модулем «Прапанаваныя праўкі» хатняй старонкі для пачаткоўца",
