--- a/i18n/homepage/ckb.json
+++ b/i18n/homepage/ckb.json
@@ -86,7 +86,7 @@
 	"tag-help_module_question": "پرسیاری یەکەی یارمەتی",
 	"tag-help_module_question-description": "ئەم دەستکارییە ئەنجامدراوە لەڕێی تایبەتمەندی \"پرسیارێک بکە\"",
 	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|ئەرکی تازەکار]]",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|ئەرکی تازەکار: بەستەرەکان]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|ئەرکی تازەکار: بەستەرەکان]]",
 	"tag-newcomer_task_links-description": "دەستکاریی ئەرکی «بەستەرەکان» لەلایەن یەکەی دەستکارییە پێشنیارکراوەکانی پەڕەی دەستپێکی تازەکارەکە پێشنیار کراوە",
 	"growthexperiments-homepage-help-dialog-title": "لە پرسگا بپرسە",
 	"growthexperiments-homepage-help-header": "یارمەتی وەربگرە بۆ دەستکاریکردن",
