--- a/i18n/homepage/cs.json
+++ b/i18n/homepage/cs.json
@@ -141,13 +141,13 @@
 	"tag-newcomer_task-description": "Editace navržená Domovskou stránkou nováčka",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Editační tipy: korektury]]",
 	"tag-newcomer_task_copyedit-description": "Korektura článku uložené pomocí modulu Editační tipy z Domovské stránky nováčka",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Editační tipy: reference]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Editační tipy: reference]]",
 	"tag-newcomer_task_references-description": "Přidání referencí uložené pomocí modulu Editační tipy z Domovské stránky nováčka",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Editační tipy: aktualizace článku]]",
 	"tag-newcomer_task_update-description": "Aktualizace článku uložené pomocí modulu Editační tipy z Domovské stránky nováčka",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Editační tipy: rozšíření článku]]",
 	"tag-newcomer_task_expand-description": "Rozšíření článku uložené pomocí modulu Editační tipy z Domovské stránky nováčka",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Editační tipy: přidání odkazů]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Editační tipy: přidání odkazů]]",
 	"tag-newcomer_task_links-description": "Odkazy přidané pomocí editačních tipů z Domovské stránky nováčka",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Doporučeno: Přidaný odkaz]]",
 	"tag-newcomer_task_add_link-description": "Odkaz přidaný pomocí editačních tipů z Domovské stránky nováčka",
