--- a/i18n/homepage/el.json
+++ b/i18n/homepage/el.json
@@ -104,13 +104,13 @@
 	"tag-newcomer_task-description": "Επεξεργασία που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Αποστολή νεοεισερχόμενου: επιμέλεια]]",
 	"tag-newcomer_task_copyedit-description": "Επεξεργασία αποστολής «Επιμέλεια» που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Αποστολή νεοεισερχόμενου: παραπομπές]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Αποστολή νεοεισερχόμενου: παραπομπές]]",
 	"tag-newcomer_task_references-description": "Επεξεργασία αποστολής «Παραπομπές» που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Αποστολή νεοεισερχόμενου: ενημέρωση]]",
 	"tag-newcomer_task_update-description": "Επεξεργασία αποστολής «Ενημέρωση» που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Αποστολή νεοεισερχόμενου: επέκταση]]",
 	"tag-newcomer_task_expand-description": "Επεξεργασία αποστολής «Επέκταση» που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Αποστολή νεοεισερχόμενου: σύνδεσμοι]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Αποστολή νεοεισερχόμενου: σύνδεσμοι]]",
 	"tag-newcomer_task_links-description": "Επεξεργασία «Σύνδεσμοι» που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Προτείνεται: προσθήκη συνδέσμων]]",
 	"tag-newcomer_task_add_link-description": "Επεξεργασία αποστολής «προσθήκη συνδέσμου» που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
