--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -127,13 +127,13 @@
 	"tag-newcomer_task-description": "Edit suggested by the suggested edits module of the newcomer homepage",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Newcomer task: copyedit]]",
 	"tag-newcomer_task_copyedit-description": "\"Copyedit\" task edit suggested by the suggested edits module of the newcomer homepage",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Newcomer task: references]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Newcomer task: references]]",
 	"tag-newcomer_task_references-description": "\"References\" task edit suggested by the suggested edits module of the newcomer homepage",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Newcomer task: update]]",
 	"tag-newcomer_task_update-description": "\"Update\" task edit suggested by the suggested edits module of the newcomer homepage",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Newcomer task: expand]]",
 	"tag-newcomer_task_expand-description": "\"Expand\" task edit suggested by the suggested edits module of the newcomer homepage",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Newcomer task: links]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Newcomer task: links]]",
 	"tag-newcomer_task_links-description": "\"Links\" task edit suggested by the suggested edits module of the newcomer homepage",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Suggested: add links]]",
 	"tag-newcomer_task_add_link-description": "\"Add link\" task edit suggested by the suggested edits module of the newcomer homepage",
