--- a/i18n/homepage/es.json
+++ b/i18n/homepage/es.json
@@ -167,13 +167,13 @@
 	"tag-newcomer_task-description": "Edición sugerida por el módulo de ediciones sugeridas de la página de inicio para usuarios nuevos",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Tarea para novatos: revisión]]",
 	"tag-newcomer_task_copyedit-description": "Edición de la tarea \"Copyedit\" sugerida por el módulo de ediciones de la página de inicio para usuarios nuevos",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Tarea para novatos: referencias]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Tarea para novatos: referencias]]",
 	"tag-newcomer_task_references-description": "Edición de la tarea \"Referencias\" sugerida por el módulo de ediciones sugeridas de la página de inicio para nuevos usuarios",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Tarea para novatos: actualizar]]",
 	"tag-newcomer_task_update-description": "\"Actualizar\" la edición de la tarea sugerida por el módulo de ediciones sugeridas de la página de inicio para nuevos usuarios.",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Newcomer task: expand]]",
 	"tag-newcomer_task_expand-description": "\"Expandir\" la edición de la tarea sugerida por el módulo de ediciones sugeridas de la página de inicio para los nuevos usuarios",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Newcomer task: links]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Newcomer task: links]]",
 	"tag-newcomer_task_links-description": "Edición de la tarea \"Enlaces\" sugerida por el módulo de ediciones sugeridas de la página de inicio para nuevos usuarios",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Sugerencia: añadir enlaces]]",
 	"tag-newcomer_task_add_link-description": "Edición de la tarea \"Añadir enlace\" sugerida por el módulo de ediciones sugeridas de la página para nuevos usuarios",
