--- a/i18n/homepage/fa.json
+++ b/i18n/homepage/fa.json
@@ -130,13 +130,13 @@
 	"tag-newcomer_task-description": "ویرایش‌هایی که از طریق پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی کاربران تازه‌وارد انجام شده‌اند",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|وظیفه تازه‌وارد: ویرایستاری]]",
 	"tag-newcomer_task_copyedit-description": "وظیفهٔ «ویرایستاری» پیشنهادی توسط پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی تازه‌واردان",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|وظیفه تازه‌وارد: منبع‌دهی]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|وظیفه تازه‌وارد: منبع‌دهی]]",
 	"tag-newcomer_task_references-description": "وظیفهٔ «منبع‌دهی» پیشنهادی توسط پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی تازه‌واردان",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|وظیفه تازه‌وارد: به‌روزرسانی]]",
 	"tag-newcomer_task_update-description": "وظیفهٔ «به‌روزرسانی» پیشنهادی توسط پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی تازه‌واردان",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|وظیفه تازه‌وارد: گسترش]]",
 	"tag-newcomer_task_expand-description": "وظیفهٔ «گسترش» پیشنهادی توسط پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی تازه‌واردان",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|وظیفه تازه‌وارد: پیونددهی]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|وظیفه تازه‌وارد: پیونددهی]]",
 	"tag-newcomer_task_links-description": "وظیفهٔ «پیونددهی» پیشنهادی توسط پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی تازه‌واردان",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|پیشنهادی: افزودن پیوند]]",
 	"tag-newcomer_task_add_link-description": "ویرایش وظیفهٔ «افزودن پیوند» پیشنهاد شده از سوی پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی کاربران تازه‌وارد",
