--- a/i18n/homepage/fi.json
+++ b/i18n/homepage/fi.json
@@ -106,7 +106,7 @@
 	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Uuden tulokkaan tehtävä]]",
 	"tag-newcomer_task-description": "Tulokkaan aloitussivun muokkausehdotus-moduulin ehdottama muokkaus",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Uuden tulokkaan tehtävä: kielenhuolto]]",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Uuden tulokkaan tehtävä: lähteet]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Uuden tulokkaan tehtävä: lähteet]]",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Uuden tulokkaan tehtävä: päivittäminen]]",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Ehdotettu: lisää linkkejä]]",
 	"tag-newcomer_task_add_link-description": "Tulokkaan aloitussivun muokkausehdotusmoduulin ehdottama \"Lisää linkki\" -muokkaustehtävä",
