--- a/i18n/homepage/fr.json
+++ b/i18n/homepage/fr.json
@@ -158,13 +158,13 @@
 	"tag-newcomer_task-description": "Modification suggérée par le module de modifications suggérées de la page d’accueil des nouveaux arrivants",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Tâche de novice : relecture]]",
 	"tag-newcomer_task_copyedit-description": "Tâche de « modification de copie » suggérée par le module de modifications suggérées de la page d’accueil des novices",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Tâche de novice : références]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Tâche de novice : références]]",
 	"tag-newcomer_task_references-description": "Tâche de « références » suggérée par le module de modifications suggérées de la page d’accueil des novices",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Tâche de novice : mise à jour]]",
 	"tag-newcomer_task_update-description": "Tâche de « mise à jour » suggérée par le module de modifications suggérées de la page d’accueil des novices",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Tâche de novice : développement]]",
 	"tag-newcomer_task_expand-description": "Tâche de « développement » suggérée par le module de modifications suggérées de la page d’accueil des novices",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Tâche de novice : liens]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Tâche de novice : liens]]",
 	"tag-newcomer_task_links-description": "Tâche de « liens » suggérée par le module de modifications suggérées de la page d’accueil des novices",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Suggéré : ajouter des liens]]",
 	"tag-newcomer_task_add_link-description": "Modification de tâche « Ajouter un lien » suggérée par le module de modifications suggérées de la page d’accueil pour nouveau venu.",
