--- a/i18n/homepage/he.json
+++ b/i18n/homepage/he.json
@@ -138,13 +138,13 @@
 	"tag-newcomer_task-description": "עריכה שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|משימה למתחיל: הגהה]]",
 	"tag-newcomer_task_copyedit-description": "עריכה במסגרת משימת \"הגהה\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|משימה למתחיל: מקורות]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|משימה למתחיל: מקורות]]",
 	"tag-newcomer_task_references-description": "עריכה במסגרת משימת \"מקורות\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|משימה למתחיל: עדכון]]",
 	"tag-newcomer_task_update-description": "עריכה במסגרת משימת \"עדכון\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|משימה למתחיל: הרחבה]]",
 	"tag-newcomer_task_expand-description": "עריכה במסגרת משימת \"הרחבה\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|משימה למתחיל: קישורים]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|משימה למתחיל: קישורים]]",
 	"tag-newcomer_task_links-description": "עריכה במסגרת משימת \"קישורים\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|מוצע: הוספת קישורים]]",
 	"tag-newcomer_task_add_link-description": "עריכה במסגרת משימת \"הוספת קישור\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
