--- a/i18n/homepage/ig.json
+++ b/i18n/homepage/ig.json
@@ -7,7 +7,7 @@
 	},
 	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Newcomer task]]",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Newcomer task: copyedit]]",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Newcomer task: references]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Newcomer task: references]]",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Newcomer task: update]]",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Newcomer task: expand]]",
 	"tag-newcomer_task_expand-description": "\"Dọsaa\" ọrụ mmezi okpukpu mmezi nke ihu nnabata onye ọhụrụ tụrụ aro",
