--- a/i18n/homepage/ja.json
+++ b/i18n/homepage/ja.json
@@ -145,13 +145,13 @@
 	"tag-newcomer_task-description": "新規参加者ホームページのお勧め編集モジュールが提案する編集",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|新規参加者タスク: 校正]]",
 	"tag-newcomer_task_copyedit-description": "新規参加者ホームページのお勧め編集モジュールによって提案された「校正」タスク編集",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|新規参加者タスク: 出典]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|新規参加者タスク: 出典]]",
 	"tag-newcomer_task_references-description": "新規参加者ホームページのお勧め編集モジュールによって提案された「出典」タスク編集",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|新規参加者タスク: 更新]]",
 	"tag-newcomer_task_update-description": "新規参加者ホームページのお勧め編集モジュールによって提案された「更新」タスク編集",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|新規参加者タスク: 加筆]]",
 	"tag-newcomer_task_expand-description": "新規参加者ホームページのお勧め編集モジュールによって提案された「加筆」タスク編集",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|新規参加者タスク: リンク]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|新規参加者タスク: リンク]]",
 	"tag-newcomer_task_links-description": "新規参加者ホームページのお勧め編集モジュールによって提案された「リンク」タスク編集",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|おすすめ: リンクを追加]]",
 	"tag-newcomer_task_add_link-description": "新規参加者ホームページのお勧め編集モジュールによって提案された「リンクの追加」タスク編集",
