--- a/i18n/homepage/nb.json
+++ b/i18n/homepage/nb.json
@@ -123,13 +123,13 @@
 	"tag-newcomer_task-description": "Redigering foreslått av modul på nybegynnerhjemmesiden",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Oppgave for nybegynnere: korrekturlesing]]",
 	"tag-newcomer_task_copyedit-description": "«Korrekturlesing»-oppgave foreslått av modulen for foreslåtte redigeringer på nybegynnerhjemmesiden",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Oppgave for nybegynnere: referanser]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Oppgave for nybegynnere: referanser]]",
 	"tag-newcomer_task_references-description": "«Referanser»-oppgave foreslått av modulen for foreslåtte redigeringer på nybegynnerhjemmesiden",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Oppgave for nybegynnere: oppdatering]]",
 	"tag-newcomer_task_update-description": "«Oppdatering»-oppgave foreslått av modulen for foreslåtte redigeringer på nybegynnerhjemmesiden",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Oppgave for nybegynnere: utvidelse]]",
 	"tag-newcomer_task_expand-description": "«Utvidelse»-oppgave foreslått av modulen for foreslåtte redigeringer på nybegynnerhjemmesiden",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Oppgave for nybegynnere: lenker]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Oppgave for nybegynnere: lenker]]",
 	"tag-newcomer_task_links-description": "«Lenker»-oppgave foreslått av modulen for foreslåtte redigeringer på nybegynnerhjemmesiden",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Foreslått: legg til lenker]]",
 	"tag-newcomer_task_add_link-description": "«Legg til lenke»-redigering foreslått av nybegynnerhjemmesidens modul for foreslåtte redigeringer",
