--- a/i18n/homepage/nl.json
+++ b/i18n/homepage/nl.json
@@ -125,7 +125,7 @@
 	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Taak voor nieuwkomers]]",
 	"tag-newcomer_task-description": "Bewerking voorgesteld door de module voor voorgestelde bewerkingen van de startpagina voor nieuwkomers",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Nieuwkomer-taak: proeflezen]]",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Nieuwkomer-taak: referenties]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Nieuwkomer-taak: referenties]]",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Voorgesteld: voeg links toe]]",
 	"tag-newcomer_task_add_link-description": "De taakbewerking \"Link toevoegen\" voorgesteld door de module voor voorgestelde bewerkingen van de startpagina voor nieuwkomers",
 	"growthexperiments-homepage-help-dialog-title": "Stel een vraag aan de helpdesk",
