--- a/i18n/homepage/pl.json
+++ b/i18n/homepage/pl.json
@@ -127,13 +127,13 @@
 	"tag-newcomer_task-description": "Edycje zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Zasugerowano edycję: poprawa stylu]]",
 	"tag-newcomer_task_copyedit-description": "Zadanie „poprawa stylu” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Zasugerowano edycję: uzupełnienie przypisów]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Zasugerowano edycję: uzupełnienie przypisów]]",
 	"tag-newcomer_task_references-description": "Zadanie „uzupełnienie przypisów” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Zasugerowano edycję: aktualizacja]]",
 	"tag-newcomer_task_update-description": "Zadanie „aktualizacja” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Zasugerowano edycję: rozbudowa]]",
 	"tag-newcomer_task_expand-description": "Zadanie „rozbudowa” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Zasugerowano edycję: linki]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Zasugerowano edycję: linki]]",
 	"tag-newcomer_task_links-description": "Zadanie „linki” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Zasugerowano edycję: dodanie linków]]",
 	"tag-newcomer_task_add_link-description": "Zadanie „dodanie linków” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
