--- a/i18n/homepage/ro.json
+++ b/i18n/homepage/ro.json
@@ -130,13 +130,13 @@
 	"tag-newcomer_task-description": "Editare sugerate de modulul de editări sugerate din pagina acasă pentru nou-veniți",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Sarcină de nou-venit: corectare]]",
 	"tag-newcomer_task_copyedit-description": "Sarcina de editare „Corectare” sugerată de către modulul de editări sugerate a paginii acasă a nou-venitului",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Sarcină de nou-venit: referințe]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Sarcină de nou-venit: referințe]]",
 	"tag-newcomer_task_references-description": "Sarcina de editare „Referințe” sugerată de către modulul de editări sugerate a paginii acasă a nou-venitului",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Sarcină de nou-venit: actualizare]]",
 	"tag-newcomer_task_update-description": "Sarcina de editare „Actualizare” sugerată de către modulul de editări sugerate a paginii acasă a nou-venitului",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Sarcină de nou-venit: extindere]]",
 	"tag-newcomer_task_expand-description": "Sarcina de editare „Extindere” sugerată de către modulul de editări sugerate a paginii acasă a nou-venitului",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Sarcină de nou-venit: legături]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Sarcină de nou-venit: legături]]",
 	"tag-newcomer_task_links-description": "Sarcina de editare „Legături” sugerată de către modulul de editări sugerate a paginii acasă a nou-venitului",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Sugerat: adăugați legături]]",
 	"tag-newcomer_task_add_link-description": "Editare sugerată de tip sarcină „Adăugați legătură” de modulul de editări sugerate din pagina acasă pentru nou-veniți",
