--- a/i18n/homepage/ru.json
+++ b/i18n/homepage/ru.json
@@ -142,13 +142,13 @@
 	"tag-newcomer_task-description": "Правка, предложенная модулем предложенных правок домашней страницы новичка",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Задача для новичка: корректура]]",
 	"tag-newcomer_task_copyedit-description": "Задача «Корректура», предложенная модулем предлагаемых правок на домашней странице новичка",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Задача для новичка: сноски]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Задача для новичка: сноски]]",
 	"tag-newcomer_task_references-description": "Задача по редактированию «Сноски», предложенная модулем предлагаемых правок на домашней странице новичка",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Задача для новичка: обновление]]",
 	"tag-newcomer_task_update-description": "Задача по редактированию «Обновление», предложенная модулем предлагаемых правок на домашней странице новичка",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Задачи для новичков: расширение]]",
 	"tag-newcomer_task_expand-description": "Задача по редактированию «Дополнение», предложенная модулем предлагаемых правок на домашней странице новичка",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Задачи для новичков: ссылки]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Задачи для новичков: ссылки]]",
 	"tag-newcomer_task_links-description": "Задача по редактированию «Ссылки», рекомендованная модулем рекомендуемых правок на домашней странице новичка.",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Предлагается: добавить ссылки]]",
 	"tag-newcomer_task_add_link-description": "Задача по редактированию «Добавьте ссылку», рекомендованная модулем рекомендуемых правок на домашней странице новичка.",
