--- a/i18n/homepage/sl.json
+++ b/i18n/homepage/sl.json
@@ -130,13 +130,13 @@
 	"tag-newcomer_task-description": "Urejanje, ki ga je predlagal modul za urejanja na začetni strani za začetnike",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|naloga začetnika: lektura]]",
 	"tag-newcomer_task_copyedit-description": "Naloga urejanja »lektoriraj«, ki jo je predlagal modul za urejanja na domači strani za začetnike",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|naloga začetnika: sklici]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|naloga začetnika: sklici]]",
 	"tag-newcomer_task_references-description": "Naloga urejanja »sklici«, ki jo je predlagal modul za urejanja na domači strani za začetnike",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|naloga začetnika: posodobitev]]",
 	"tag-newcomer_task_update-description": "Opravilo urejanja »posodobi«, ki ga je predlagal modul za urejanja na domači strani za začetnike",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|naloga začetnika: razširitev]]",
 	"tag-newcomer_task_expand-description": "Naloga urejanja »razširi«, ki jo je predlagal modul za urejanja na domači strani za začetnike",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|naloga začetnika: povezave]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|naloga začetnika: povezave]]",
 	"tag-newcomer_task_links-description": "Naloga urejanja »povezave«, ki jo je predlagal modul za urejanja na domači strani za začetnike",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|naloga začetnika: dodaj povezave]]",
 	"tag-newcomer_task_add_link-description": "Opravilo urejanja »Dodaj povezavo«, ki ga je predlagal modul za urejanja na domači strani za začetnike",
