--- a/i18n/homepage/sv.json
+++ b/i18n/homepage/sv.json
@@ -113,13 +113,13 @@
 	"tag-newcomer_task-description": "Redigering föreslagen av redigeringsförslagsmodulen på nybörjarhemsidan",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Nybörjaruppgift: korrekturläsa]]",
 	"tag-newcomer_task_copyedit-description": "\"Korrekturläsning\"-uppgift som föreslagits av modulen för föreslagna uppgifter på nybörjarsidan.",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Nybörjaruppgift: källor]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Nybörjaruppgift: källor]]",
 	"tag-newcomer_task_references-description": "\"Referenser\"-uppgift som föreslagits av modulen för föreslagna uppgifter på nybörjarsidan.",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Nybörjaruppgift: uppdatera]]",
 	"tag-newcomer_task_update-description": "\"Uppdatera\"-uppgift som föreslagits av modulen för föreslagna uppgifter på nybörjarsidan.",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Nybörjaruppgift: utöka]]",
 	"tag-newcomer_task_expand-description": "\"Expandera\"-uppgift som föreslagits av modulen för föreslagna uppgifter på nybörjarsidan.",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Nybörjaruppgift: länkar]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Nybörjaruppgift: länkar]]",
 	"tag-newcomer_task_links-description": "\"Länkar\"-uppgift som föreslagits av modulen för föreslagna uppgifter på nybörjarsidan.",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Förslag: lägg till länkar]]",
 	"tag-newcomer_task_add_link-description": "\"Lägg till länk\"-redigering föreslagen av föreslagna redigeringar-modulen på nybörjarhemsidan",
