--- a/i18n/homepage/te.json
+++ b/i18n/homepage/te.json
@@ -105,13 +105,13 @@
 	"tag-newcomer_task-description": "కొత్త వాడుకరి హోంపేజీ లోని దిద్దుబాటు సూచనలు మాడ్యూలులో సూచించిన దిద్దుబాట్లు",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Newcomer task: copyedit]]",
 	"tag-newcomer_task_copyedit-description": "కొత్త వాడుకరి హోంపేజీ లోని దిద్దుబాటు సూచనలు మాడ్యూలు సూచించిన \"కాపీఎడిట్\" దిద్దుబాటు పని",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Newcomer task: references]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Newcomer task: references]]",
 	"tag-newcomer_task_references-description": "కొత్త వాడుకరి హోంపేజీ లోని దిద్దుబాటు సూచనలు మాడ్యూలు సూచించిన \"మూలాలు\" దిద్దుబాటు పని",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Newcomer task: update]]",
 	"tag-newcomer_task_update-description": "కొత్త వాడుకరి హోంపేజీ లోని దిద్దుబాటు సూచనలు మాడ్యూలు సూచించిన \"తాజాకరణ\" దిద్దుబాటు పని",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Newcomer task: expand]]",
 	"tag-newcomer_task_expand-description": "కొత్త వాడుకరి హోంపేజీ లోని దిద్దుబాటు సూచనలు మాడ్యూలు సూచించిన \"విస్తరణ\" దిద్దుబాటు పని",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Newcomer task: links]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Newcomer task: links]]",
 	"tag-newcomer_task_links-description": "కొత్త వాడుకరి హోంపేజీ లోని దిద్దుబాటు సూచనలు మాడ్యూలు సూచించిన \"లింకులు\" దిద్దుబాటు పని",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|సూచన: లింకులు చేర్చు]]",
 	"tag-newcomer_task_add_link-description": "కొత్త వాడుకరి హోంపేజీ లోని దిద్దుబాటు సూచనలు మాడ్యూలు సూచించిన \"లింకు చేర్పు\" దిద్దుబాటు పని",
