--- a/i18n/homepage/tr.json
+++ b/i18n/homepage/tr.json
@@ -149,13 +149,13 @@
 	"tag-newcomer_task-description": "Yeni gelen ana sayfanın önerilen değiştirme modülü tarafından önerilen değişiklik",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Yenigelen görevi: copyedit]]",
 	"tag-newcomer_task_copyedit-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Tashih\" görev düzenlemesi",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Yeni gelen görevi: kaynaklar]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Yeni gelen görevi: kaynaklar]]",
 	"tag-newcomer_task_references-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Kaynaklar\" görev düzenlemesi",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Yeni gelen görevi: güncelleme]]",
 	"tag-newcomer_task_update-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Güncelleme\" görev düzenlemesi",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Yeni gelen görevi: genişletme]]",
 	"tag-newcomer_task_expand-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Genişletme\" görev düzenlemesi",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Yeni gelen görevi: bağlantılar]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Yeni gelen görevi: bağlantılar]]",
 	"tag-newcomer_task_links-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Bağlantılar\" görev düzenlemesi",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Önerilen: bağlantı ekleyin]]",
 	"tag-newcomer_task_add_link-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Bağlantı ekle\" görev düzenlemesi",
