--- a/i18n/homepage/uk.json
+++ b/i18n/homepage/uk.json
@@ -138,13 +138,13 @@
 	"tag-newcomer_task-description": "Редагування, запропоноване модулем пропонованих редагувань домашньої сторінки новачка",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Завдання новачку: коректура]]",
 	"tag-newcomer_task_copyedit-description": "Редагування «Коректура», запропоноване модулем запропонованих редагувань домашньої сторінки новачка",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Завдання новачку: примітки]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Завдання новачку: примітки]]",
 	"tag-newcomer_task_references-description": "Редагування «Примітки», запропоноване модулем запропонованих редагувань домашньої сторінки новачка",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Завдання новачку: оновлення]]",
 	"tag-newcomer_task_update-description": "Редагування «Оновлення», запропоноване модулем запропонованих редагувань домашньої сторінки новачка",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Завдання новачку: доповнення]]",
 	"tag-newcomer_task_expand-description": "Редагування «Доповнення», запропоноване модулем запропонованих редагувань домашньої сторінки новачка",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Завдання новачку: посилання]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Завдання новачку: посилання]]",
 	"tag-newcomer_task_links-description": "Редагування «Посилання», запропоноване модулем запропонованих редагувань домашньої сторінки новачка",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Запропоноване: додати посилання]]",
 	"tag-newcomer_task_add_link-description": "Редагування «Додати посилання», запропоноване модулем пропонованих редагувань домашньої сторінки новачка",
