--- a/i18n/homepage/bn.json
+++ b/i18n/homepage/bn.json
@@ -133,13 +133,13 @@
 	"tag-newcomer_task-description": "নবাগতদের নীড়পাতার পরামর্শকৃত সম্পাদনাগুলো মডিউল দ্বারা পরামর্শকৃত",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|নবাগতদের কাজ: রচনা সংশোধন]]",
 	"tag-newcomer_task_copyedit-description": "নবাগতের নীড়পাতায় পরামর্শকৃত সম্পাদনা মডিউল কর্তৃক \"রচনা সংশোধন\" সম্পাদনার পরামর্শ",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|নবাগতদের কাজ: তথ্যসূত্র]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|নবাগতদের কাজ: তথ্যসূত্র]]",
 	"tag-newcomer_task_references-description": "নবাগতের নীড়পাতায় পরামর্শকৃত সম্পাদনা মডিউল কর্তৃক \"তথ্যসূত্র\" সম্পাদনার পরামর্শ",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|নবাগতদের কাজ: হালনাগাদ করা]]",
 	"tag-newcomer_task_update-description": "নবাগতের নীড়পাতায় পরামর্শকৃত সম্পাদনা মডিউল কর্তৃক \"হালনাগাদ\" সম্পাদনার পরামর্শ",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|নবাগতদের কাজ: সম্প্রসারণ]]",
 	"tag-newcomer_task_expand-description": "নবাগতের নীড়পাতায় পরামর্শকৃত সম্পাদনা মডিউল কর্তৃক \"সম্প্রসারণ\" সম্পাদনার পরামর্শ",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|নবাগতদের কাজ: লিঙ্ক]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|নবাগতদের কাজ: লিঙ্ক]]",
 	"tag-newcomer_task_links-description": "নবাগতের নীড়পাতায় পরামর্শকৃত সম্পাদনা মডিউল কর্তৃক \"লিঙ্ক\" সম্পাদনার পরামর্শ",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|পরামর্শ: লিঙ্ক যুক্ত করা]]",
 	"tag-newcomer_task_add_link-description": "নবাগতের নীড়পাতায় পরামর্শকৃত সম্পাদনা মডিউল কর্তৃক \"লিঙ্ক যুক্তকরণ\" সম্পাদনার পরামর্শ",
