--- a/i18n/homepage/de.json
+++ b/i18n/homepage/de.json
@@ -154,13 +154,13 @@
 	"tag-newcomer_task-description": "Bearbeitung basierend auf dem Modul 'Vorgeschlagene Bearbeitungen' der Neulings-Startseite",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Einstiegs-Aufgabe: Korrekturlesen]]",
 	"tag-newcomer_task_copyedit-description": "„Korrekturlesen“-Bearbeitung basierend auf dem Modul für vorgeschlagene Bearbeitungen der Neulings-Startseite",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Einstiegs-Aufgabe: Einzelnachweise]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Einstiegs-Aufgabe: Einzelnachweise]]",
 	"tag-newcomer_task_references-description": "„Einzelnachweise“-Bearbeitung basierend auf dem Modul für vorgeschlagene Bearbeitungen der Neulings-Startseite",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Einstiegs-Aufgabe: aktualisieren]]",
 	"tag-newcomer_task_update-description": "„Aktualisieren“-Bearbeitung basierend auf dem Modul für vorgeschlagene Bearbeitungen der Neulings-Startseite",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Einstiegs-Aufgabe: Erweitern]]",
 	"tag-newcomer_task_expand-description": "„Erweitern“-Bearbeitung basierend auf dem Modul „Vorgeschlagene Bearbeitungen“ der Neulings-Startseite",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Einstiegs-Aufgabe: Verlinkungen]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Einstiegs-Aufgabe: Verlinkungen]]",
 	"tag-newcomer_task_links-description": "„Verlinken“-Bearbeitung basierend auf dem Modul für vorgeschlagene Bearbeitungen der Neulings-Startseite",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Vorgeschlagen: Links hinzufügen]]",
 	"tag-newcomer_task_add_link-description": "„Link hinzufügen“ Bearbeitungsaufgabe basierend auf dem „Vorgeschlagene Bearbeitungen“-Modul der Neulings-Startseite",
