--- a/i18n/homepage/ia.json
+++ b/i18n/homepage/ia.json
@@ -128,13 +128,13 @@
 	"tag-newcomer_task-description": "Modification suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Carga de novicio: correction de probas]]",
 	"tag-newcomer_task_copyedit-description": "Modification \"Correction de probas\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Carga de novicio: referentias]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Carga de novicio: referentias]]",
 	"tag-newcomer_task_references-description": "Modification \"Referentias\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Carga de novicio: actualisation]]",
 	"tag-newcomer_task_update-description": "Modification \"Actualisation\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Carga de novicio: expansion]]",
 	"tag-newcomer_task_expand-description": "Modification \"Expansion\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Carga de novicio: ligamines]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Carga de novicio: ligamines]]",
 	"tag-newcomer_task_links-description": "Modification \"Ligamines\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Suggerite: adder ligamines]]",
 	"tag-newcomer_task_add_link-description": "Modification \"Adder ligamine\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
