--- a/i18n/homepage/id.json
+++ b/i18n/homepage/id.json
@@ -124,13 +124,13 @@
 	"tag-mentorship_panel_question-description": "Suntingan yang dibuat dari panel bantuan fitur \"Tanya guru Anda\"",
 	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Tugas pengguna baru]]",
 	"tag-newcomer_task-description": "Suntingan yang disarankan oleh modul saranan penyuntingan dari beranda pengguna baru",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Tugas pengguna baru: referensi]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Tugas pengguna baru: referensi]]",
 	"tag-newcomer_task_references-description": "Suntingan pekerjaan \"referensi\" yang disarankan oleh modul saran penyuntingan untuk halaman beranda pendatang baru",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Tugas pengguna baru: perbarui]]",
 	"tag-newcomer_task_update-description": "Suntingan pekerjaan \"perbarui\" yang disarankan oleh modul saran penyuntingan untuk halaman beranda pendatang baru",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Tugas pengguna baru: kembangkan]]",
 	"tag-newcomer_task_expand-description": "Suntingan pekerjaan \"kembangkan\" yang disarankan oleh modul saran penyuntingan untuk halaman beranda pendatang baru",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Tugas pengguna baru: pranala]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Tugas pengguna baru: pranala]]",
 	"tag-newcomer_task_links-description": "Suntingan pekerjaan \"pranala\" yang disarankan oleh modul saran penyuntingan untuk halaman beranda pendatang baru",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Disarankan: tambahkan pranala]]",
 	"tag-newcomer_task_add_link-description": "Suntingan pekerjaan \"menambahkan pranala\" yang disarankan oleh modul saran penyuntingan untuk halaman beranda pendatang baru",
