--- a/i18n/homepage/ka.json
+++ b/i18n/homepage/ka.json
@@ -129,13 +129,13 @@
 	"tag-newcomer_task-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული რედაქტირება",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|ახალბედას დავალება: კორექტურა]]",
 	"tag-newcomer_task_copyedit-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული დავალება „კორექტურა“",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|ახალბედას დავალება: სქოლიოები]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|ახალბედას დავალება: სქოლიოები]]",
 	"tag-newcomer_task_references-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული დავალება „სქოლიოები“",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|ახალბედას დავალება: განახლება]]",
 	"tag-newcomer_task_update-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული დავალება „განახლება“",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|ახალბედას დავალება: გაფართოება]]",
 	"tag-newcomer_task_expand-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული დავალება „გაფართოება“",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|ახალბედას დავალება: ბმულები]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|ახალბედას დავალება: ბმულები]]",
 	"tag-newcomer_task_links-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული დავალება „ბმულები“",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|შეთავაზებული: ბმულების დამატება]]",
 	"tag-newcomer_task_add_link-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული დავალება „ბმულების დამატება“",
