--- a/i18n/homepage/ko.json
+++ b/i18n/homepage/ko.json
@@ -116,13 +116,13 @@
 	"tag-newcomer_task-description": "새 사용자가 새 사용자 홈페이지의 편집 추천 기능을 통해 추천받아 작업한 편집입니다.",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|새 사용자 작업: 교열]]",
 	"tag-newcomer_task_copyedit-description": "새 사용자 홈페이지의 편집 제안 모듈에 의해 제안된 \"교열\" 작업 편집",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|새 사용자 작업: 출처]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|새 사용자 작업: 출처]]",
 	"tag-newcomer_task_references-description": "새 사용자 홈페이지의 편집 제안 모듈에 의해 제안된 \"각주\" 작업 편집",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|새 사용자 작업: 업데이트]]",
 	"tag-newcomer_task_update-description": "새 사용자 홈페이지의 편집 제안 모듈에 의해 제안된 \"업데이트\" 작업 편집",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|새 사용자 작업: 확장]]",
 	"tag-newcomer_task_expand-description": "새 사용자 홈페이지의 편집 제안 모듈에 의해 제안된 \"확장\" 작업 편집",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|새 사용자 작업: 링크]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|새 사용자 작업: 링크]]",
 	"tag-newcomer_task_links-description": "새 사용자 홈페이지의 편집 제안 모듈에 의해 제안된 \"링크\" 작업 편집",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|제안됨: 링크 추가]]",
 	"tag-newcomer_task_add_link-description": "새 사용자 홈페이지의 편집 제안 모듈을 통해 제안된 \"링크 추가\" 작업 편집",
