--- a/i18n/homepage/lv.json
+++ b/i18n/homepage/lv.json
@@ -108,10 +108,10 @@
 	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Jaunpienācēju uzdevums]]",
 	"tag-newcomer_task-description": "Labojumu ieteicis jaunpienācēju sākumlapas ieteikto labojumu modulis",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Jaunpienācēju uzdevums: teksta uzlabošana]]",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Jaunpienācēju uzdevums: atsauces]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Jaunpienācēju uzdevums: atsauces]]",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Jaunpienācēju uzdevums: atjaunināšana]]",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Jaunpienācēju uzdevums: paplašināšana]]",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Jaunpienācēju uzdevums: saites]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Jaunpienācēju uzdevums: saites]]",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Ieteikums: pievieno saites]]",
 	"tag-newcomer_task_add_link-description": "\"Pievienot saiti\" labojumu ieteicis jaunpienācēju sākumlapas ieteikto labojumu modulis",
 	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Ieteikums: pievieno attēlus]]",
