--- a/i18n/homepage/ne.json
+++ b/i18n/homepage/ne.json
@@ -107,13 +107,13 @@
 	"tag-newcomer_task-description": "नवआगन्तुक गृहपृष्ठको सुझाव गरिएको सम्पादन मोड्युलद्वारा सुझाव गरिएको सम्पादन गर्नुहोस्",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|नयाँ आगमन कार्य: संशोधन]]",
 	"tag-newcomer_task_copyedit-description": "\"संशोधन सम्पादन\" कार्य सम्पादन नयाँ आगमन गृहपृष्ठको सुझाव गरिएको सम्पादन मोड्युलद्वारा सुझाव गरिएको",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|नयाँ आगमन कार्य: सन्दर्भहरू]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|नयाँ आगमन कार्य: सन्दर्भहरू]]",
 	"tag-newcomer_task_references-description": "\"सन्दर्भ\" कार्य सम्पादन नयाँ आगमन गृहपृष्ठ को सुझाव गरिएको सम्पादन मोड्युल द्वारा सुझाव",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|नयाँ आगमन कार्य: अपडेट]]",
 	"tag-newcomer_task_update-description": "\"अद्यावधिक\" कार्य सम्पादन नयाँ आगमन गृहपृष्ठ को सुझाव गरिएको सम्पादन मोड्युल द्वारा सुझाव",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|नयाँ आगमन कार्य: विस्तार गर्नुहोस्]]",
 	"tag-newcomer_task_expand-description": "\"विस्तार गर्नुहोस्\" कार्य सम्पादन नयाँ आगमन गृहपृष्ठ को सुझाव गरिएको सम्पादन मोड्युल द्वारा सुझाव",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|नयाँ आगमन कार्य: कडीहरू]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|नयाँ आगमन कार्य: कडीहरू]]",
 	"tag-newcomer_task_links-description": "\"कडीहरू\" कार्य सम्पादन नयाँ आगमन गृहपृष्ठको सुझाव गरिएको सम्पादन मोड्युलद्वारा सुझाव गरिएको",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|सुझाव गरिएको: कडीहरू थप्नुहोस्]]",
 	"tag-newcomer_task_add_link-description": "\"कडी थप्नुहोस्\" कार्य सम्पादन नयाँ आगमन गृहपृष्ठको सुझाव गरिएको सम्पादन मोड्युलद्वारा सुझाव गरिएको",
