--- a/i18n/homepage/pt-br.json
+++ b/i18n/homepage/pt-br.json
@@ -137,13 +137,13 @@
 	"tag-newcomer_task-description": "Edição sugerida pelo módulo de edições sugeridas da página inicial do novato",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Tarefa para recém-chegados: referências]]",
 	"tag-newcomer_task_copyedit-description": "Edição para tarefa \"revisão\" sugerida pelo módulo de edições sugeridas da página principal do recém-chegado",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Tarefa para recém-chegados: referências]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Tarefa para recém-chegados: referências]]",
 	"tag-newcomer_task_references-description": "Edição para tarefa \"referências\" sugerida pelo módulo de edições sugeridas da página principal do recém-chegado",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Tarefa para recém-chegados: atualização]]",
 	"tag-newcomer_task_update-description": "Edição para tarefa \"atualização\" sugerida pelo módulo de edições sugeridas da página principal do recém-chegado",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Tarefa para recém-chegados: expansão]]",
 	"tag-newcomer_task_expand-description": "Edição para tarefa \"expansão\" sugerida pelo módulo de edições sugeridas da página principal do recém-chegado",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Tarefa para recém-chegados: links]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Tarefa para recém-chegados: links]]",
 	"tag-newcomer_task_links-description": "Edição para tarefa \"links\" sugerida pelo módulo de edições sugeridas da página principal do recém-chegado",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Sugerida: adicionar links]]",
 	"tag-newcomer_task_add_link-description": "Edição para tarefa \"adicionar links\" sugerida pelo módulo de edições sugeridas da página principal de recém-chegado",
