--- a/i18n/homepage/zh-hant.json
+++ b/i18n/homepage/zh-hant.json
@@ -124,13 +124,13 @@
 	"tag-newcomer_task-description": "編輯按新手首頁建議編輯模組的建議",
 	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|新手任務：編修]]",
 	"tag-newcomer_task_copyedit-description": "透過新手首頁建議編輯模組所建議作出的「編輯」任務編輯",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|新手任務：參考資料]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|新手任務：參考資料]]",
 	"tag-newcomer_task_references-description": "透過新手首頁建議編輯模組所建議作出的「參考資料」任務編輯",
 	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|新手任務：更新]]",
 	"tag-newcomer_task_update-description": "透過新手頁面建議編輯模組所建議作出的「更新」任務編輯",
 	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|新手任務：擴充]]",
 	"tag-newcomer_task_expand-description": "透過新手首頁建議編輯模組所建議作出的「擴充」任務編輯",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|新手任務：連結]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|新手任務：連結]]",
 	"tag-newcomer_task_links-description": "透過新手頁面建議編輯模組所建議作出的「連結」任務編輯",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|建議：添加連結]]",
 	"tag-newcomer_task_add_link-description": "透過新手頁面建議編輯模組所建議作出的「添加連結」任務編輯",
